fixes spacing on index
to indicate more content on the page

--- a/_sass/_hacks.scss
+++ b/_sass/_hacks.scss
@@ -1,3 +1,3 @@
 section#introduction {
-margin-top: -25px;
+  padding-top: -25px;
 }
